--- a/Api/Api.csproj
+++ b/Api/Api.csproj
@@ -8,14 +8,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.14" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.11" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="Otp.NET" Version="1.3.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <Reference Include="ZionApi">
-      <HintPath>..\..\api-common-bin\ZionApi\ZionApi.dll</HintPath>
+    <Reference Include="ZionHelper">
+      <HintPath>..\..\api-common-bin\ZionHelper\ZionHelper.dll</HintPath>
     </Reference>
     <Reference Include="ZionOrm">
       <HintPath>..\..\api-common-bin\ZionOrm\ZionOrm.dll</HintPath>
@@ -26,7 +28,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Services\" />
+    <Folder Include="Doc\" />
+    <Folder Include="NewFolder\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\api-common-src\ZionApi\ZionApi.csproj" />
   </ItemGroup>
 
 </Project>
