--- a/Api/.env
+++ b/Api/.env
@@ -1,9 +1,9 @@
-ZION_ORM_DRIVER_NAME=Postgres
-ZION_ORM_SERVER=localhost
-ZION_ORM_PORT=5432
-ZION_ORM_USER=postgres
-ZION_ORM_PASSWORD=Roger*120**
-ZION_ORM_DATABASE=vas-new
+ZION_ORM_DRIVER_NAME_1=Postgres
+ZION_ORM_SERVER_1=localhost
+ZION_ORM_PORT_1=5432
+ZION_ORM_USER_1=postgres
+ZION_ORM_PASSWORD_1=Roger*120**
+ZION_ORM_DATABASE_1=vas-new
 VAS_AUTH_TOKEN_VALIDATE_URL=https://localhost:7218/token-validate
 TOKEN_SECRET_KEY=1cAf!fdkgn9opwyf710@opa562bd56va2333267f98569
 TOKEN_PARTNER=7FA25G2C1BXKS2810NQN4450SXVEE54PAP2P247
