--- a/Api/Api.csproj
+++ b/Api/Api.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.14" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.11" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
@@ -34,6 +35,9 @@
     </Reference>
     <Reference Include="ZionHelper">
       <HintPath>..\..\api-common-bin\ZionHelper\ZionHelper.dll</HintPath>
+    </Reference>
+    <Reference Include="ZionOrm">
+      <HintPath>..\..\api-common-bin\ZionOrm\ZionOrm.dll</HintPath>
     </Reference>
     <Reference Include="ZionShield">
       <HintPath>..\..\api-common-bin\ZionShield\ZionShield.dll</HintPath>
