--- a/Api/.env
+++ b/Api/.env
@@ -7,6 +7,7 @@ ZION_ORM_PORT_1=5432
 ZION_ORM_USER_1=postgres
 ZION_ORM_PASSWORD_1=Roger*120**
 ZION_ORM_DATABASE_1=vas-main
+ZION_ORM_DB_MODEL_1=VAS
 
 -------------------------------
 -- DBMS Connection 2 - vas-ext
@@ -17,6 +18,7 @@ ZION_ORM_PORT_2=5432
 ZION_ORM_USER_2=postgres
 ZION_ORM_PASSWORD_2=Roger*120**
 ZION_ORM_DATABASE_2=vas-ext
+ZION_ORM_DB_MODEL_2=VAS
 
 --------------------------------
 -- Api authentication parameters
