--- a/Api/Api.csproj
+++ b/Api/Api.csproj
@@ -19,6 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="alert\" />
     <Folder Include="log\" />
     <Folder Include="Doc\" />
   </ItemGroup>
